Fix the alignment of the list
The link is not properly aligned by putting it into a container and modifying it in center it becomes easy to read.

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,30 @@
 h1 {
-  background-color: rgb(255, 190, 68);
-  color: rgb(43, 25, 2);
+  background-color: yellow;
+  color: rgb(241, 7, 7);
   text-align: center;
-  font-family: "Times New Roman", Times, serif;
+  font-family:Georgia, 'Times New Roman', Times, serif;
   font-weight: 800;
   font-size: 75px;
 }
 
 ul {
-  background-color:rgb(255, 166, 115) ;
-  color: bisque;
+  background-color:yellow;
+  color: rgb(255, 0, 0);
   text-align: center;
-  font-size: 30px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+div.container {
+  text-align: center;
+}
+
+ul.recipes {
+  display: inline-block;
+  text-align: left;
+}
+
+
+#link-color {
+  color: rgb(0, 0, 0);
 }
